pods-test-rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-dev-rbac
  namespace: desarrollo
  labels:
    app: pod-dev-rbac
spec:
  containers:
  - image: "nginx"
    name: aspnetapp-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Pod
metadata:
  name: pod-prod-rbac
  namespace: produccion
  labels:
    app: pod-prod-rbac
spec:
  containers:
  - image: "nginx"
    name: aspnetapp-image
    ports:
    - containerPort: 80
      protocol: TCP
