numerico-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: numerico-service
  namespace: default
  labels:
    app: numerico
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: http
  selector:
    app: numerico
